<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nanoddegree.musicapp.Classic">

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      tools:context="com.example.android.miwok.MainActivity"
      tools:layout_constraintTop_creator="1"
      tools:layout_constraintRight_creator="1"
      tools:layout_constraintBottom_creator="1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      tools:layout_constraintLeft_creator="1"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        style="@style/LabelTextView"
        android:text="@string/label_classic_activity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textView"
          style="@style/CategoryStyle"
          android:layout_width="0dp"
          android:layout_weight="2"
          android:text="@string/classic"/>

      <TextView
          style="@style/MusicType"
          android:text="@string/buy"
          android:layout_width="0dp"
          android:layout_weight="1"/>

      <TextView
          android:id="@+id/classicBuy"
          style="@style/MusicType"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:text="@string/play"/>

    </LinearLayout>

    <TextView
        style="@style/DetailTextView"
        android:text="@string/classic_activity_detail"/>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>
